--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 server.port=8512
 
+# mysql db config
 spring.datasource.url=jdbc:mysql://122.51.180.68/sugar?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=sugar
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# mybatis config
+mybatis.type-aliases-package=jc.sugar.JiaHui.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# date format
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.default-property-inclusion=non_null
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
