--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # date format
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Asia/Shanghai
 spring.jackson.default-property-inclusion=non_null
 
 spring.session.store-type=jdbc
