测试计划管理接口

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <version>2.1.4</version>
         </dependency>
         <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.0.0</version>
@@ -266,6 +271,7 @@
                         <exclude>*.**</exclude>
                         <exclude>*/*.xml</exclude>
                         <exclude>jmeter/**</exclude>
+                        <exclude>jmx/**</exclude>
                     </excludes>
                     <archive>
                         <manifest>
