--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=jc.sugar.JiaHui.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+# page-helper 分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
 # date format
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -18,3 +23,8 @@ spring.jackson.default-property-inclusion=non_null
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+
+# JMeter 相关的文件上传后保存的目录名，该目录跟服务部署目录同级关系
+sugar.upload-root=upload
+# JMeter 测试计划jmx文件保存目录，该目录跟服务部署目录属同级关系
+sugar.jmx-root=jmx
