--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8512
-logging.level.root=debug
+#logging.level.root=debug
 # mysql db config
 spring.datasource.url=jdbc:mysql://122.51.180.68/sugar?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=sugar
@@ -25,6 +25,6 @@ spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 
 # JMeter 相关的文件上传后保存的目录名，该目录跟服务部署目录同级关系
-sugar.upload-root=upload
+sugar.upload-root=C:\\Users\\Administrator\\Desktop
 # JMeter 测试计划jmx文件保存目录，该目录跟服务部署目录属同级关系
 sugar.jmx-root=jmx
