--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8512
-#logging.level.root=debug
+logging.level.root=debug
 # mysql db config
 spring.datasource.url=jdbc:mysql://122.51.180.68/sugar?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=sugar
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis config
 mybatis.type-aliases-package=jc.sugar.JiaHui.entity
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 # page-helper 分页插件配置
 pagehelper.helperDialect=mysql
@@ -26,5 +26,4 @@ spring.session.jdbc.initialize-schema=always
 
 # JMeter 相关的文件上传后保存的目录名，该目录跟服务部署目录同级关系
 sugar.upload-root=C:\\Users\\Administrator\\Desktop
-# JMeter 测试计划jmx文件保存目录，该目录跟服务部署目录属同级关系
-sugar.jmx-root=jmx
+
