--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8512
-logging.level.root=debug
+#logging.level.root=debug
 # mysql db config
 spring.datasource.url=jdbc:mysql://122.51.180.68/sugar?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=sugar
