--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,5 @@ spring.session.jdbc.initialize-schema=always
 
 # JMeter 相关的文件上传后保存的目录名，该目录跟服务部署目录同级关系
 sugar.upload-root=C:\\Users\\Administrator\\Desktop
+#sugar.upload-root=/root/upload
 
