测试计划内文件上传接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,8 @@ spring.session.jdbc.initialize-schema=always
 
 # JMeter 相关的文件上传后保存的目录名，该目录跟服务部署目录同级关系
 sugar.upload-root=C:\\Users\\Administrator\\Desktop
+# 测试计划中上传的各文件
+sugar.test-upload-root=C:\\Users\\Administrator\\Desktop
 #sugar.upload-root=/root/upload
+#sugar.test-upload-root=/root/test-upload
 
